--- a/public/projects.html
+++ b/public/projects.html
@@ -21,6 +21,7 @@
         {
           $(".page-chooser li").removeClass("active");
           $(this).addClass("active");
+          $("#Android-content").fadeOut(400);
           $("#web-content").fadeOut(400);
           $("#research-content").fadeOut(400);
           setTimeout(function() {
@@ -28,10 +29,23 @@
           }, 350);
         });
 
+        $("#Android").click(function() 
+        {
+          $(".page-chooser li").removeClass("active");
+          $(this).addClass("active");
+          $("#iOS-content").fadeOut(400);
+          $("#web-content").fadeOut(400);
+          $("#research-content").fadeOut(400);
+          setTimeout(function() {
+              $("#Android-content").fadeIn(400)
+          }, 350);
+        });
+
         $("#web").click(function() 
         {
           $(".page-chooser li").removeClass("active");
           $(this).addClass("active");
+          $("#Android-content").fadeOut(400);
           $("#iOS-content").fadeOut(400);
           $("#research-content").fadeOut(400);
           setTimeout(function() {
@@ -43,6 +57,7 @@
         {
           $(".page-chooser li").removeClass("active");
           $(this).addClass("active");
+          $("#Android-content").fadeOut(400);
           $("#iOS-content").fadeOut(400);
           $("#web-content").fadeOut(400);
           setTimeout(function() {
@@ -118,6 +133,7 @@
     <div class="page-chooser">
       <ul class="wrap">
         <li id="iOS" class="active wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">iOS</li>
+        <li id="Android" class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">Android</li>
         <li id="web" class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">Web</li>
         <li id="research" class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">Research</li>
       </ul>
@@ -313,6 +329,28 @@
       <br></br>
       <br></br>
     </div> <!-- END OF iOS CONTENT -->
+
+    <div id="Android-content">
+      <article class="portfolio-item white odd" id="ontheway-Android">
+        <div class="wrap row">
+          <div class="col-md-7">
+            <div class="image-wrapper-blank wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
+              <center> <img src="images/screenshot_ontheway-Android.png" alt="Ontheway" width="281" height="500"> </center>
+            </div>
+          </div>
+
+          <div class="col-md-5">
+            <div class="description">
+              <div class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".1s">
+                <h2>Ontheway</h2>
+                <p><span style="color:black">A peer-to-peer delivery network.</span><br><br>Request anything delivered anywhere or make money doing deliveries on the side. Find out more at <a href="http://www.ontheway-app.com" target="_blank">ontheway-app.com</a></p>
+              </div>
+              <a href="https://play.google.com/store/apps/details?id=innovations.enroute.jjiang.ontheway" target="_blank" class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s"><img src="images/googleplay.svg" id="googleplayimg"></a>
+            </div>
+          </div>
+        </div>
+      </article>
+    </div> <!-- END OF Android CONTENT -->
 
     <div id="web-content" style="display:none;">
 
