Projects: linked github in header

--- a/public/projects.html
+++ b/public/projects.html
@@ -114,7 +114,9 @@
         <div class="wrap">
           <div id="profile-intro">
             <h1 class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0s">My Projects</h1>
-            <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".3s">Check out the projects I've worked on.</p>
+            <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".3s">
+              Check out the projects I've worked on, or just view my <a href="http://www.github.com/vzhou842" target="_blank" class="a_light">Github</a>
+            </p>
           </div>
         </div>
       </div>
