cloak related cleanup / organization

--- a/public/cloak.html
+++ b/public/cloak.html
@@ -1,6 +1,6 @@
 <head>
 	<title>Cloak</title>
-	<link rel="stylesheet" type="text/css" href="./style.css" />
+	<link rel="stylesheet" type="text/css" href="/css/cloakStyle.css" />
 </head>
 <body>
 	<div class="header">CLOAK</div>
