--- a/public/index.html
+++ b/public/index.html
@@ -94,9 +94,9 @@
     <div id="about-me-content">
       <div class="container" style="padding:50px;">
         <h1 class="page-header wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">About Me</h1>
-        <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">I'm originally from Plano, Texas, and one of my favorite pastimes is creating apps - I've been doing that since 2012. I'm well-versed in Objective-C, C/C++, Java, Javascript, R, and HTML/CSS, as well as in Python, SQL, and PHP to a lesser degree. A lot of my projects have been games or other sources of entertainment, but I've also ventured outside of these areas and pursued projects like <a href="http://www.bit.ly/ontheway-iOS" target="_blank">Ontheway</a>.</p>
+        <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">I'm a software developer from Plano, Texas. I'm well-versed in iOS (Objective-C) and Android (Java) app development, Node.js (Javascript), R, C/C++, HTML/CSS, as well as Python, SQL, and PHP to a lesser degree. I've been a pretty avid iOS developer for some time, and have ~20 apps in the App Store totalling close to 100,000 downloads. One of the projects I'm most proud of is <a href="http://www.ontheway-app.com" target="_blank">Ontheway</a>, a peer-to-peer delivery network I started with a few friends for which I built the vast majority of the iOS, Android, and Node.js apps.</p>
         <br></br>
-        <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">All the graphics, resources, and code in my apps were made or written by me. If you have any thoughts or comments on me or my projects, please use the <a href="/contact">Contact</a> section. I appreciate your time and interest. </p>
+        <p class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.1s">If you have any thoughts or comments on me or my projects, please use the <a href="/contact">Contact</a> section. I appreciate your time and interest. </p>
       </div>
 
       <br></br>
