removed wow animation for header + first item in projects

--- a/public/projects.html
+++ b/public/projects.html
@@ -167,10 +167,10 @@
 
     <div class="page-chooser">
       <ul class="wrap">
-        <li id="iOS" class="active wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".3s">iOS</li>
-        <li id="Android" class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".3s">Android</li>
-        <li id="web" class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".3s">Web</li>
-        <li id="research" class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".3s">Research</li>
+        <li id="iOS" class="active">iOS</li>
+        <li id="Android">Android</li>
+        <li id="web">Web</li>
+        <li id="research">Research</li>
       </ul>
     </div>
 
@@ -179,18 +179,18 @@
       <article class="portfolio-item white" id="ontheway">
         <div class="wrap row">
           <div class="col-md-7">
-            <div class="image-wrapper-blank wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay=".1s">
+            <div class="image-wrapper-blank">
               <center> <img src="images/screenshot_ontheway.png" alt="Ontheway" width="567" height="500"> </center>
             </div>
           </div>
 
           <div class="col-md-5">
             <div class="description">
-              <div class="wow fadeInRight" data-wow-duration="0.75s" data-wow-delay=".1s">
+              <div>
                 <h2>Ontheway</h2>
                 <p><span style="color:black">A peer-to-peer delivery network.</span><br><br>Request anything delivered anywhere or make money doing deliveries on the side. Find out more at <a href="http://www.ontheway-app.com" target="_blank">ontheway-app.com</a></p>
               </div>
-              <a href="bit.ly/ontheway-iOS" target="_blank" class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.5s"><img src="images/appstore.svg" id="appstoreimg"></a>
+              <a href="bit.ly/ontheway-iOS" target="_blank"><img src="images/appstore.svg" id="appstoreimg"></a>
             </div>
           </div>
 
@@ -369,18 +369,18 @@
       <article class="portfolio-item white odd" id="ontheway-Android">
         <div class="wrap row">
           <div class="col-md-7">
-            <div class="image-wrapper-blank wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay=".1s">
+            <div class="image-wrapper-blank">
               <center> <img src="images/screenshot_ontheway-Android.png" alt="Ontheway" width="281" height="500"> </center>
             </div>
           </div>
 
           <div class="col-md-5">
             <div class="description">
-              <div class="wow fadeInRight" data-wow-duration="0.75s" data-wow-delay=".1s">
+              <div>
                 <h2>Ontheway</h2>
                 <p><span style="color:black">A peer-to-peer delivery network.</span><br><br>Request anything delivered anywhere or make money doing deliveries on the side. Find out more at <a href="http://www.ontheway-app.com" target="_blank">ontheway-app.com</a></p>
               </div>
-              <a href="https://play.google.com/store/apps/details?id=innovations.enroute.jjiang.ontheway" target="_blank" class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.5s"><img src="images/googleplay.svg" id="googleplayimg"></a>
+              <a href="https://play.google.com/store/apps/details?id=innovations.enroute.jjiang.ontheway" target="_blank"><img src="images/googleplay.svg" id="googleplayimg"></a>
             </div>
           </div>
         </div>
@@ -454,7 +454,7 @@
 
      <div id="research-content" style="display:none;">
       <div style="background:#FFF;">
-        <div class="container wow fadeIn" data-wow-duration="0.75s" data-wow-delay=".1s">
+        <div class="container">
           <br></br>
           <br></br>
           <h1>Facial Feature Detection Using the Hough Transform</h1>
