--- a/public/projects.html
+++ b/public/projects.html
@@ -393,6 +393,27 @@
         <div class="wrap row">
           <div class="col-md-7">
             <div class="image-wrapper-blank">
+              <center> <img src="images/screenshot_otw_web.png" alt="ontheway-app.com" width="655" height="500"> </center>
+            </div>
+          </div>
+
+          <div class="col-md-5">
+            <div class="description">
+              <br>
+              <h3>Ontheway</h3>
+              <p><br><br>A Node.js web server for Ontheway, a peer-to-peer delivery platform.<br>Visit the website for more information.</p>
+              <br></br>
+              <a href="http://www.ontheway-app.com" target="_blank"> <span class="button blue arrow">Go To Site</span> </a>
+            </div>
+          </div>
+
+        </div>
+      </article>
+
+      <article class="portfolio-item white odd">
+        <div class="wrap row">
+          <div class="col-md-7">
+            <div class="image-wrapper-blank">
               <center> <img src="images/screenshot_victorzhou.png" alt="VictorZhou.com" width="655" height="500"> </center>
             </div>
           </div>
