added Cloak to /iOS

--- a/public/projects.html
+++ b/public/projects.html
@@ -197,6 +197,27 @@
         </div>
       </article>
 
+      <article class="portfolio-item white odd" id="cloak">
+        <div class="wrap row">
+          <div class="col-md-7">
+            <div class="image-wrapper-blank wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay=".1s">
+              <center> <img src="images/screenshot_cloak.png" alt="Cloak" width="567" height="500"> </center>
+            </div>
+          </div>
+
+          <div class="col-md-5">
+            <div class="description">
+              <div class="wow fadeInRight" data-wow-duration="0.75s" data-wow-delay=".1s">
+                <h2>Cloak</h2>
+                <p><span style="color:black">Securely and seamlessly hiding personal information in plain sight.</span><br><br>First Place Winner of Best Privacy and Security Hacks at HackPrinceton Fall 2015.<br><br>For more information, visit <a href="/cloak" target="_blank">victorzhou.com/cloak</a>.</p>
+              </div>
+              <!--a href="https://itunes.apple.com/us/app/flooding-dots/id956044693?mt=8&uo=4" target="_blank" class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.5s"><img src="images/appstore.svg" id="appstoreimg"></a-->
+            </div>
+          </div>
+
+        </div>
+      </article>
+
       <article class="portfolio-item white odd" id="floodingdots">
         <div class="wrap row">
           <div class="col-md-7">
