added link to cloak iOS

--- a/public/projects.html
+++ b/public/projects.html
@@ -211,7 +211,7 @@
                 <h2>Cloak</h2>
                 <p><span style="color:black">Securely and seamlessly hiding personal information in plain sight.</span><br><br>First Place Winner of Best Privacy and Security Hacks at HackPrinceton Fall 2015.<br><br>For more information, visit <a href="/cloak" target="_blank">victorzhou.com/cloak</a>.</p>
               </div>
-              <!--a href="https://itunes.apple.com/us/app/flooding-dots/id956044693?mt=8&uo=4" target="_blank" class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.5s"><img src="images/appstore.svg" id="appstoreimg"></a-->
+              <a href="https://itunes.apple.com/us/app/cloak-protect-your-information/id1070902484?mt=8&ign-mpt=uo%3D4" target="_blank" class="wow fadeIn" data-wow-duration="0.75s" data-wow-delay="0.5s"><img src="images/appstore.svg" id="appstoreimg"></a>
             </div>
           </div>
 
