--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="/favicon.ico" type="image/icon">
 
     <!-- JAVASCRIPT -->
-    <script src="/js/jquery-1.11.2.min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/js/wow.min.js"></script>
