using bower wow

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="/js/wow.min.js"></script>
+    <script src="/bower_components/wow/dist/wow.min.js"></script>
     <script> new WOW().init(); </script>
     <script src="/js/controllers.js"></script>
     <script src="/js/angularApp.js"></script>
