--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
   <!--   BODY   -->
   <body>
     <div class="ui-view-container">
-      <div ui-view class="anim-in-out anim-fade" data-anim-sync="true"></div>
+      <div ui-view class="anim-in-out anim-fade" data-anim-sync="true" autoscroll="true"></div>
     </div>
   </body>
     
