--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html lang="en" ng-app="victorzhou">
   <head>
+    <title> Victor Zhou </title>
     <!-- CORE CSS -->
     <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/profile.css">
