--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=0.75">
 
+    <meta name="description" content="Victor Zhou's personal website and portfolio."
+
     <!-- CORE CSS -->
     <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/profile.css">
@@ -18,26 +20,6 @@
     <!-- FAVICON -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/icon"> 
     <link rel="icon" href="/favicon.ico" type="image/icon">
-
-    <!-- JAVASCRIPT -->
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="/bower_components/angular-ui-router-anim-in-out/anim-in-out.js"></script>
-    <script src="/bower_components/wow/dist/wow.min.js"></script>
-    <script> new WOW().init(); </script>
-    <script src="/js/controllers.js"></script>
-    <script src="/js/angularApp.js"></script>
-    <script> 
-      //Google Analytics
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-58664433-1', 'auto');
-      ga('send', 'pageview');
-    </script>
 
     <base href="/">
 
@@ -63,6 +45,26 @@
     <div class="ui-view-container">
       <div ui-view class="anim-in-out anim-fade" data-anim-sync="true" autoscroll="true"></div>
     </div>
+
+    <!-- JAVASCRIPT -->
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="/bower_components/angular-ui-router-anim-in-out/anim-in-out.js"></script>
+    <script src="/bower_components/wow/dist/wow.min.js"></script>
+    <script> new WOW().init(); </script>
+    <script src="/js/controllers.js"></script>
+    <script src="/js/angularApp.js"></script>
+    <script> 
+      //Google Analytics
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-58664433-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
     
   <!--             FOOTER            -->
