added redirect for beta.geoarena.online

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,13 @@
 <html lang="en" ng-app="victorzhou">
+  <script>
+    // Redirect beta.geoarena.online to beta.geoarena.online:3000
+    if (window.location.hostname === 'beta.geoarena.online' ||
+      window.location.hostname === 'beta.geoarena.localhost') {
+      window.location = 'http://beta.geoarena.online:3000';
+    } else {
+      window.location = 'http://geoarena.online';
+    }
+  </script>
   <head>
     <title> Victor Zhou </title>
 
