http->https, added generals.io, defaulting projects to web

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
           </ul>
           <ul id='nav-right'>
             <li><a ui-sref="profile.about" id="profile_header">Profile</a></li>
-            <li><a ui-sref="projects.iOS" id="projects_header">Projects</a></li>
+            <li><a ui-sref="projects.web" id="projects_header">Projects</a></li>
             <li><a ui-sref="contact" id="contact_header">Contact</a></li>
             <li><a ui-sref="presskits" id="presskits_header">Press Kits</a></li>
           </ul>
