--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 
     <!-- JAVASCRIPT -->
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/bower_components/angular-ui-router-anim-in-out/anim-in-out.js"></script>
@@ -79,11 +79,11 @@
       <nav class="sitemap">
         <ul>
           <li><a ui-sref='profile.about' title="View my profile" class="underliner">Profile<span></span></a></li>
-          <li><a ui-sref='projects.iOS' title="View my portfolio" class="underliner">Projects<span></span></a></li>
-          <li><a ui-sref='contact' title="Write me a letter" class="underliner">Contact<span></span></a></li>
+          <li><a ui-sref='projects.iOS' title="View my projects" class="underliner">Projects<span></span></a></li>
+          <li><a ui-sref='contact' title="Contact me" class="underliner">Contact<span></span></a></li>
         </ul>
       </nav>
-      <span class="copyright">Copyright 2016 Victor Zhou</span>
+      <span class="copyright">Copyright 2017 Victor Zhou</span>
     </div>
   </footer>
 
