minor cleanup/refactoring/modernization

--- a/public/cloak.html
+++ b/public/cloak.html
@@ -9,7 +9,7 @@
 		Securely and seamlessly hiding sensitive personal information in plain sight.
 	</p>
 	<br></br>
-	<img src="AppIcon.png" class="icon">
+	<img src="/images/icon_cloak.png" class="icon">
 	<div class="second-container">
 		<br></br>
 		<p class="subtitle centered">
