Fixed missing > in HTML

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <title>Victor Zhou</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=0.75">
-    <meta name="description" content="Victor Zhou's personal website and portfolio."
+    <meta name="description" content="Victor Zhou's personal website and portfolio.">
 
     <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
